# PASE_ANN

./: .gitignore  CMakeLists.txt  README.md  test_ann_index
docs/: IVFFlatEval.ipynb
docs/alibaba_pase/: 01_init.sql  02_fill_table.py  03_create_index.py  04_measure_queries.py  sift_hnsw_200efs.csv  sift_hnsw_80efs.csv  sift_ivfflat_1000cc.csv  sift_ivfflat_100cc.csv
docs/faiss/: gist_cc_100.csv  gist_cc_200.csv  sift_cc_100.csv  sift_cc_200.csv
docs/our_profile/: sift_cc1000_k1.csv  sift_cc1000_k100.csv  sift_cc100_k1.csv  sift_cc100_k100.csv
src/: CMakeLists.txt  calc_distance.h  calc_distance.hpp  clustering.h  clustering.hpp  page.h  page.hpp  parser.h  parser.hpp  pase.h  pase.hpp  utils.cpp  utils.h  utils.hpp
test/: CMakeLists.txt  common.cpp  test_k_means.cpp  test_parser.cpp  test_pase_build.cpp  test_profile.cpp  test_search.cpp  test_utils.cpp  test_utils.hpp
test/test_data/: clustering_in.txt
thread_pool/: CMakeLists.txt  thread_pool.cpp  thread_pool.h  thread_pool.hpp
